--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@ layout: home
 	  <div class="avatar">
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
-	  <h3>I'm <strong>{{ site.author }}</strong>, a Freelance Developer</h3>
-	  <h3>And Engineering Student at Hasanuddin University, Makassar</h3>
+	  <h3>I'm <strong>{{ site.author }}</strong>, Software Engineer</h3>
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-	  <h3>For more check out my academic &amp; professional <a href="http://biomadeira.github.io/vitae">Resume</a>.</h3>
-	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <h3>For more check out professional <a href="http://fariqussalam.github.io/vitae">Resume</a>.</h3>
+	  <h3>Contact me @  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a></h3>
 	  {% include social.html %}
 	</div>
 </section>
